--- a/src/main/resources/static/front/center.html
+++ b/src/main/resources/static/front/center.html
@@ -84,8 +84,9 @@
                   <li class="date">{{ord.createDate}}</li>
                   <li class="state" v-if="ord.flag==0">待付款</li>
                   <li class="state" v-else>待签收</li>
-                  <li class="operate"> <button  data-toggle="modal" :data-target="'#detailsModal' + ord.oid">查看</button><span>|</span><a href="#"> 取消 </a>
-                   <a href="#" class="btn btn-primary btn-sm" v-if="ord.flag==0">付款</a> 
+                  <li class="operate"> 
+                  <a href="#"> 取消 </a>
+                   <a :href="'orderDetails/ '+ord.oid" target="_blank"  class="btn btn-primary btn-sm" v-if="ord.flag==0">付款</a> 
                    <a href="#" class="btn btn-primary btn-sm" v-else>已付款</a> 
                    </li>
                 </ul>
@@ -418,7 +419,7 @@
 
 <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=Fn0BvD3aGemRSpKuVLa6wn9AWWc01EsX"></script>
 <script src="/zyl/front/js/axios.js" type="text/javascript"></script>
-
+<script type="text/javascript" src="/zyl/front/js/qs.js"></script>
 <script src="/zyl/back/js/vue.js" type="text/javascript"></script>
 <script src="/zyl/front/js/center.js" type="text/javascript"></script>
 <script type="text/javascript" src="/zyl/back/js/showpic.js"></script>
