--- a/src/main/resources/static/front/details.html
+++ b/src/main/resources/static/front/details.html
@@ -271,7 +271,7 @@
 										<div class="detail-comment-item-avatar">
 											<img src="#" alt="朱*">
 										</div>
-										<p>**</p>
+										<p>评价日期:{{com.cdate}}</p>
 									</div>
 									<div class="detail-comment-item-main tm-m-photos">
 										<div class="detail-comment-item-content">
@@ -280,7 +280,7 @@
 										<ul
 											class="detail-comment-item-imglist tm-m-photos-thumb clearfix">
 											<li class="detail-comment-item-img" data-src="#"><img
-												:src="com.comImg" alt=""></li>
+												:src="'../' + com.comImg" alt=""></li>
 										</ul>
 										<div class="detail-comment-item-imgviewer tm-m-photo-viewer">
 											<a class="detail-comment-item-closeview" href="javascript:;">关闭大图</a>
