--- a/src/main/resources/static/front/center.html
+++ b/src/main/resources/static/front/center.html
@@ -60,11 +60,11 @@
                   <li class="date">下单时间</li>
                   <li class="state">
                     <select class="form-control input-sm" id="zt" onchange="DoSelectZT()">
-                      <option value="0" selected="selected">全部状态</option>
-                      <option value="1">待付款</option>
-                      <option value="2">已完成</option>
-                      <option value="4">待评价</option>
-                      <option value="-1">已取消</option>
+                      <option value="" selected="selected">全部状态</option>
+                      <option value="0">待付款</option>
+                      <option value="1">已付款</option>
+                      <option value="3">已发货</option>
+                      <option value="4">已收货</option>
                     </select>
                   </li>
                   <li class="operate">操作</li>
@@ -74,19 +74,25 @@
                 <ul class="order-list">
                   <li class="img-box"> 
                   <a href="#" v-if="ord.flag==0"><img src="../front/images/pay.jpg" width="50" height="56"></a> 
-                   <a href="#" v-if="ord.flag==1"><img src="../front/images/receive.jpg" width="50" height="56"></a> 
+                  <a href="#" v-if="ord.flag==1"><img src="../front/images/payed.png" width="50" height="56"></a> 
+                  <a href="#" v-if="ord.flag==2"><img src="../front/images/receive.jpg" width="50" height="56"></a> 
+                  <a href="#" v-if="ord.flag==3"><img src="../front/images/received.png" width="50" height="56"></a> 
                     </li>
                   <li class="number"><a href="#">{{ord.oid}}</a></li>
                   <li class="consignee">yxx</li>
                   <li class="order-price"> <span class="price-sign">¥</span> <span class="price-num">{{ord.amount}}</span> </li>
                   <li class="date">{{ord.createDate}}</li>
                   <li class="state" v-if="ord.flag==0">待付款</li>
-                  <li class="state" v-else>待签收</li>
+                  <li class="state" v-if="ord.flag==1">已付款</li>
+                  <li class="state" v-if="ord.flag==2">已发货</li>
+                  <li class="state" v-if="ord.flag==3">已收货</li>
                   <li class="operate"> 
                   <a href="#"> 取消 </a>
                    <a :href="'orderDetails/ '+ord.oid" target="_blank"  class="btn btn-primary btn-sm" v-if="ord.flag==0">付款</a> 
-                   <a :href="'viewOrderDetails/'+ord.oid" target="_blank" class="btn btn-primary btn-sm" v-else>已付款</a> 
-                   </li>
+                   <a :href="'viewOrderDetails/'+ord.oid" target="_blank" class="btn btn-primary btn-sm" v-if="ord.flag==3">去评价</a> 
+                   <a href="#" target="_blank"  class="btn btn-primary btn-sm" v-if="ord.flag==1">待发货</a> 
+                   <a href="#" target="_blank"  class="btn btn-primary btn-sm" v-if="ord.flag==2">待收货</a> 
+                  </li>
                 </ul>
               </div>
               <div class="digg"> </div>
