前台广告显示

--- a/src/main/resources/static/back/manager/supermanager.html
+++ b/src/main/resources/static/back/manager/supermanager.html
@@ -68,6 +68,11 @@
                     <li iconCls="icon-cog"><a href="javascript:void(0)" data-icon="icon-cog" data-link="manager/change_pwd.html" iframe="0">修改密码</a></li>
                 </ul>
             </div> 
+            <div title="广告投放" data-options="iconCls:'icon-user'" style="padding:5px;">  	
+    			<ul class="easyui-tree wu-side-tree">
+                    <li iconCls="icon-cog"><a href="javascript:void(0)" data-icon="icon-cog" data-link="manager/view_advertisement.html" iframe="0">广告查看</a></li>
+                </ul>
+            </div> 
             <div title="在线客服" data-options="iconCls:'icon-user'" style="padding:5px;">  	
     			<ul class="easyui-tree wu-side-tree">
                     <li iconCls="icon-cog"><a href="javascript:void(0)" data-icon="icon-cog" data-link="manager/service.html" iframe="0">在线客服</a></li>
