--- a/src/main/resources/static/front/index.html
+++ b/src/main/resources/static/front/index.html
@@ -19,8 +19,8 @@
 <style>
 /* Make the image fully responsive */
 .carousel-inner img {
-	width: 100%;
-	height: 60%;
+	width: 1520px;
+	height: 316px;
 }
 
 .festival-item-price {
@@ -159,25 +159,21 @@
 	</div>
 	<!-- 导航 End -->
 	<!-- 大图轮翻 -->
-	<div id="mainCarousel" class="carousel slide carousel-fade">
+	<div id="demo" class="carousel slide carousel-fade">
 		<div id="demo" class="carousel slide" data-ride="carousel">
-			<!-- 指示符 -->
-			<ul class="carousel-indicators">
-				<li data-target="#demo" data-slide-to="0" class="active"></li>
-				<li data-target="#demo" data-slide-to="1"></li>
-				<li data-target="#demo" data-slide-to="2"></li>
-			</ul>
+		      <!-- 指示符 -->
+			  <ul class="carousel-indicators">
+			    <li data-target="#abc" data-slide-to="0" class="active"></li>
+			    <li data-target="#abc" data-slide-to="1"></li>
+			    <li data-target="#abc" data-slide-to="2"></li>
+			  </ul>
 			<!-- 轮播图片 -->
 			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="https://static.runoob.com/images/mix/img_fjords_wide.jpg">
+				<div class="carousel-item active" >
+					<a :href="first.url"><img :src="first.adImg"></a>
 				</div>
-				<div class="carousel-item">
-					<img src="https://static.runoob.com/images/mix/img_nature_wide.jpg">
-				</div>
-				<div class="carousel-item">
-					<img
-						src="https://static.runoob.com/images/mix/img_mountains_wide.jpg">
+				<div class="carousel-item" v-for="adv in advertisements" v-if="adv.atid != first.atid">
+					<a :href="adv.url"><img :src="adv.adImg"></a>
 				</div>
 			</div>
 			<!-- 左右切换按钮 -->
@@ -189,7 +185,7 @@
 		</div>
 	</div>
 	<!-- 广告入口 -->
-	<div class="scene clearfix" style="margin-bottom: 30px;">
+<!-- 	<div class="scene clearfix" style="margin-bottom: 30px;">
 		<div class="scene-list">
 			<div class="scene-item-vertical">
 				<a href="#" target="_blank"> <img
@@ -235,10 +231,10 @@
 				</a>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- 广告入口 End -->
 	<!-- 新品来袭 -->
-	<div class="scene clearfix">
+<!-- 	<div class="scene clearfix">
 		<div class="scene-list">
 			<div class="scene-item-vertical">
 				<a href="#" target="_blank"> <img
@@ -246,7 +242,8 @@
 				</a> <span>热销21.6万束</span>
 			</div>
 		</div>
-	</div>
+	</div> -->
+	
 	<div class="fl-wrapper clearfix">
 		<!-- 楼层 爱情鲜花 -->
 		<div class="fl f-lover" id="app">
@@ -337,6 +334,8 @@
 <script src="/zyl/back/js/vue.js" type="text/javascript"></script>
 <script src="/zyl/back/js/axios.js" type="text/javascript"></script>
 <script src="/zyl/front/js/checklogin.js" type="text/javascript"></script>
+<script src="/zyl/front/js/advertisement.js" type="text/javascript"></script>
+
 <script>
 $(function() {
     $('#myModal').modal('hide');
@@ -414,10 +413,9 @@ let modal=new Vue({
 		},
 		mounted: function(){//页面渲染完成后执行的方法
 			axios.post("/zyl/flowerType/find").then(result =>{
-				this.types = result.data.data
+				this.types = result.data.data;
 			})
 			axios.post("/zyl/flower/findAll").then(res =>{
-				console.info(res);
 		        let imgs = Object.entries(res.data.data);
 		        for (var i = 0; i <= imgs.length - 1; i++) {
 		        	res.data.data[i].flowerImg = res.data.data[i].flowerImg.split(",")[0];
